Issue 3267 (Search box layout problem) http://code.google.com/p/fbug/issues/detail?id=3267
http://code.google.com/p/fbug/source/detail?r=7658

--- a/extension/skin/classic/mac/firebug.css
+++ b/extension/skin/classic/mac/firebug.css
@@ -80,7 +80,6 @@
 
 .fbsearch-textbox {
     -moz-border-radius: 10px !important;
-    padding-left: 5px !important;
 }
 
 #fbSearchOptionsPanel {
